kubernetes_networkIngress.yaml
\\ Ingress - manages SSL, LoabBalancing, Authentication

- Controller (deploy)
- Configmap
- ServiceAccount + role + roleBinding
- Service 
- Ingress resource

k create\get\describe ingress


- ingress resource difinition (required test service on 80 port that is connected to pod)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
